# rover-drone-hybrid

./: .gitignore  Drone_Code_Nano.ino  IMU_I2C_Detection.ino  IMU_Test.ino  frames_2026-04-19_04.44.05.gv
src/hybrid_humble_nav2/: README_SUMMARY.md  package.xml  regression_tests.py  sample_input.json  setup.cfg  setup.py
src/hybrid_humble_nav2/config/: nav2_obstacle_layer_example.yaml
src/hybrid_humble_nav2/hybrid_humble_nav2/: __init__.py  actions.py  config.py  control_bridge_node.py  controller.py  decision.py  hybrid_engine.py  hybrid_perception_node.py  live_yolo_test.py  main.py  manual_instructions.py  parser.py  ros_state_adapter.py  terrain.py  tracker.py
src/hybrid_humble_nav2/launch/: hybrid_perception.launch.py
src/rover_perception/: package.xml  setup.py
src/rover_perception/config/: slam_params.yaml
src/rover_perception/launch/: bringup.launch.py
src/rover_perception/rover_perception/: camera_yolo_node.py
